# norway-electricity-prices

./: LICENSE  README.md  main.py  pyproject.toml  strompriser_dataset.csv  update_dataset.py
.github/workflows/: python-app.yaml
