[tool.poetry]
name = "oslo-electricity-prices"
version = "0.1.0"
description = ""
authors = ["datadej <dejvid.no@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
DateTime = "^5.2"
pandas = "^2.1.2"
streamlit = "^1.28.0"
altair = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
