[tool.poetry]
name = "oslo-electricity-prices"
version = "0.1.0"
description = ""
authors = ["datadej <dejvid.app@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
requests = "^2.31.0"
DateTime = "^5.2"
pandas = "^2.1.2"
streamlit = "^1.28.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
